# leosat

./: LICENSE
backend/: main.py  pyproject.toml  telesat_sim.py
frontend/: index.html  main.js
