[tool.poetry]
name = "leosat-sim-backend"
version = "0.1.0"
description = "A FastAPI + Hypatia backend to simulate Telesat-like LEO constellation routing and serve data to a CesiumJS frontend."
authors = ["Lei Yuan <yuanl14159@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = ".", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"

# Core simulation and orbit libraries
# hypatia = { path = "../../hypatia", develop = true }
satgenpy = ">=0.4.0"

# API framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.31.0" }

# Useful numeric + data stack
numpy = "^1.26"
pandas = "^2.2"

# Serialization and configuration
pyyaml = "^6.0.2"
pydantic = "^2.9"

# Optional: for async tasks or caching
# Optional: utilities for async jobs, caching, and I/O
aiofiles = "^24.1.0"
redis = { version = "^5.0", optional = true }

[tool.poetry.extras]
cache = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.8"
isort = "^5.13"
mypy = "^1.11"
httpx = "^0.27"  # for FastAPI testing
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
